force-app/main/default/objects/Campaign/fields/Eligible_Industry__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Industry__c</fullName>
    <label>대상 산업</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>데이터센터</fullName>
            </value>
            <value>
                <fullName>제조</fullName>
            </value>
            <value>
                <fullName>공공</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>