force-app/main/default/objects/Campaign/fields/Eligible_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Project_Type__c</fullName>
    <label>대상 프로젝트 유형</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>신축</fullName>
            </value>
            <value>
                <fullName>증설</fullName>
            </value>
            <value>
                <fullName>교체</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>