force-app/main/default/objects/Campaign/fields/Minimum_Project_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Project_Amount__c</fullName>
    <inlineHelpText>이 캠페인의 대상이 되는 최소 프로젝트 금액. 이 금액 미만은 캠페인 대상에서 제외합니다.</inlineHelpText>
    <label>최소 규모</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>