force-app/main/default/objects/Campaign/fields/Source_Code__c.field-meta.xml
<CustomField>
    <fullName>Source_Code__c</fullName>
    <inlineHelpText>Lead의 &apos;수집 방법&apos; 값과 반드시 동일하게 입력하세요 (박람회 / 웹 / 소개 / 전화 / 기타)</inlineHelpText>
    <label>소스 코드</label>
    <length>50</length>
    <type>Text</type>
</CustomField>